feat: enhance UI components with new configurations and styles; add Slider component

--- a/frontend/styles/reset.css
+++ b/frontend/styles/reset.css
@@ -1,4 +1,17 @@
 html, body {
+    height: 100%;
+}
+
+body {
     margin: 0;
-    background-color: green;
+    overflow: hidden;
+}
+
+body,
+button {
+    font-family: 'Trebuchet MS';
+}
+
+canvas {
+    background-color: #000000;
 }
